# Flask-Mail-Lite

./: README.md  pyproject.toml
examples/: app.py
